# causal-compression-for-intervention-aware-intelligence

./: .gitignore  README.md  pyproject.toml
docs/: TKUI_FORMALIZATION.md  ci_next_steps.md  solving_catastrophic_forgetting_original.md  tkui_integration_analysis.md
experiments/: iron_creche.py
src/causal_compression/: continuity_field.py
src/prototypes/: legacy_continuity_field.py
tests/: test_continuity_field.py
