[project]
name = "causal-compression-intelligence"
version = "0.1.0"
description = "Causal Compression for Intervention Aware Intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_compression"]
